; ModuleID = '/home/carl/AnghaBench/tig/src/extr_io.c_io_run_load.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_io.c_io_run_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io = type { i32 }

@IO_RD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Failed to open IO\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @io_run_load(i8** %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.io, align 4
  store i8** %0, i8*** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %11 = load i32, i32* @IO_RD, align 4
  %12 = load i8**, i8*** %6, align 8
  %13 = call i32 @io_run(%struct.io* %10, i32 %11, i32* null, i32* null, i8** %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %4
  %16 = call i32 @error(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 %16, i32* %5, align 4
  br label %22

17:                                               ; preds = %4
  %18 = load i8*, i8** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @io_load(%struct.io* %10, i8* %18, i32 %19, i8* %20)
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %17, %15
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @io_run(%struct.io*, i32, i32*, i32*, i8**) #1

declare dso_local i32 @error(i8*) #1

declare dso_local i32 @io_load(%struct.io*, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
